# serial-model-renderer

./: CMakeLists.txt  LICENSE  README.md
resources/models/: animboxmshapefbxtogltf.glb  crazyCube3DViewerCannotParseItCorrectly.glb  human-walk-no-sword.glb  meshAnimation.glb  newblendercubes.glb
src/: CMakeLists.txt  main.cpp
